[package]
name = "ruxn"
version = "0.1.0"
authors = ["Morgan Arnold <morgan.arnold@proton.me>"]
description = "An implementation of the Uxn stack-machine written in Rust."
categories = ["emulators"]
keywords = ["uxn", "varvara"]
repository = "https://git.sr.ht/~mra/ruxn"
license = "Unlicense"
edition = "2021"
